apps/network/adguard/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: adguard
  name: adguard
  namespace: adguard
spec:
  replicas: 1
  selector:
    matchLabels:
      app: adguard
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: adguard
    spec:
      hostNetwork: true
      serviceAccountName: tailscale
      containers:
        - name: tailscaled
          image: tailscale/tailscale:latest
          securityContext:
            capabilities:
              add:
                - NET_ADMIN
                - NET_RAW
            privileged: true
          volumeMounts:
            - name: tailscaled-var-lib
              mountPath: /var/lib
            - name: tailscaled-net-tun
              mountPath: /dev/net/tun
        - image: adguard/adguardhome:v0.107.57
          name: adguard
          ports:
            - containerPort: 3000
              name: http-initial
              protocol: TCP
            - containerPort: 53
              name: dns
              protocol: UDP
            - containerPort: 8080
              name: http
              protocol: TCP
          resources: {}
          volumeMounts:
            - mountPath: /opt/adguardhome/conf
              name: adguard-config
            - mountPath: /opt/adguardhome/work
              name: adguard-data
      volumes:
        - name: adguard-data
          persistentVolumeClaim:
            claimName: adguard-data
        - name: adguard-config
          persistentVolumeClaim:
            claimName: adguard-config
        - name: tailscaled-var-lib
          persistentVolumeClaim:
            claimName: tailscaled-var-lib
        - name: tailscaled-net-tun
          hostPath:
            path: /dev/net/tun
            type: CharDevice
status: {}
