apps/network/adguard/service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: adguard
  name: adguard
  namespace: adguard
spec:
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
      name: http-initial
    - protocol: TCP
      port: 8080
      targetPort: 8080
      name: http
    - protocol: UDP
      port: 53
      targetPort: 53
      name: dns
  selector:
    app: adguard
  type: ClusterIP
status:
  loadBalancer: {}
