apps/network/adguard/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: adguard
  namespace: adguard
  annotations:
    spec.ingressClassName: traefik

spec:
  rules:
    - host: adguard.home.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: adguard
                port:
                  number: 8080
    - host: adg-init.10.0.0.131.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: adguard
                port:
                  number: 3001
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: adguard-tailscale
  namespace: adguard
  annotations:
    spec.ingressClassName: tailscale

spec:
  ingressClassName: tailscale
  tls:
    - hosts:
        - adguard.deer-truck.ts.net
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: adguard
                port:
                  number: 8080
